# ida-rust-signatures

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
configs/: batch_libraries.yaml  default.yaml  solana.yaml  solana_ebpf.yaml
docs/: architecture.md  technical-limitations.md
src/: __init__.py  collision_prevention.py
src/builders/: __init__.py  dependency_resolver.py  rlib_manager.py  rust_builder.py  smart_recompiler.py
src/cli/: main.py
src/core/: __init__.py  config.py  config_loader.py  exceptions.py  logger.py  naming_utils.py  smart_rlib_finder.py
src/extractors/: __init__.py  rlib_extractor.py  rust_type_extractor.py
src/generators/: __init__.py  collision_aware_generator.py  custom_pat_generator.py  enhanced_pat_generator.py  flair_generator.py  til_generator.py
tests/: __init__.py
